--- a/uber/public/index.html
+++ b/uber/public/index.html
@@ -10,7 +10,7 @@
     <script
             async
             defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6Xrm-P4Qe8A2Y7SSAIQwiaf_hCRcvbdg&libraries=places,maps">
+            src="https://maps.googleapis.com/maps/api/js?key=chaveAPI&libraries=places,maps">
 
     </script>
 
