--- a/uber/public/index.html
+++ b/uber/public/index.html
@@ -10,7 +10,7 @@
     <script
             async
             defer
-            src="https://maps.googleapis.com/maps/api/js?key=chaveAPI&libraries=places,maps">
+            src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.VUE_APP_GOOGLE_MAPS_API_KEY %>&libraries=places,maps">
 
     </script>
 
